--- a/public/assets/scss/5-pages/_service.scss
+++ b/public/assets/scss/5-pages/_service.scss
@@ -27,6 +27,18 @@
     }
 }
 
+button {
+    width: auto;
+    height: 50px;
+    border: none;
+    padding: 5px 30px;
+    background-color: #f0542d;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-top: 15px;
+}
+
 .imgFor {
     border-radius: 50%;
   }
